--- a/lottonumber.html
+++ b/lottonumber.html
@@ -16,7 +16,8 @@
                     console.log("페이지를 열 수 있습니다.");
                 } else {
                     alert("2시에 번호가 공개됩니다. 창을 닫고 다른 부스를 즐겨주세요");
-                    location.reload();
+                    location.href='https://morningbread123.github.io/please/';
+
                 }
             };
         </script>
