--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Arial, sans-serif;
         }
 
-        h1, h6, button {
+        h1, h6, button, img, h5 {
             position: absolute;
             left: 50%;
             transform: translateX(-50%); /* 수평 중앙 정렬 */
@@ -67,6 +67,10 @@
             .button-2 {
                 top: 70%; /* 두 번째 버튼은 70% 위치로 이동 */
             }
+            img {
+                top:10%;
+            }
+            
         }
 
         /* 작은 화면에서의 버튼 크기 및 배치 */
@@ -94,11 +98,19 @@
     </style>
 </head>
 <body>
+    <a href="https://www.youtube.com/results?search_query=%EC%9E%A0%EB%9C%B0+tv"><img src="./santa.jpg"></a>
 
     <h1>LOTTO</h1>
     <h6>수학심화탐구반</h6>
     <button type="button" onclick="location.href='lottoprobability.html'">로또 당첨 확률 확인하기</button>
     <button class="button-2" type="button" onclick="location.href='lottonumber.html'">로또 당첨 번호 확인하기</button> <!-- 두 번째 버튼 추가 -->
+    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
+    
+  
+    <h5>만약 기다리는 동안 할게 없다면<br> 산타모자를 클릭해보세요</h5>
 
 </body>
 </html>
