--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </style>
 </head>
 <body>
-    <a href="https://www.youtube.com/results?search_query=%EC%9E%A0%EB%9C%B0+tv"><img src="./santa.jpg"></a>
+    <a href="https://www.youtube.com/results?search_query=%EC%9E%A0%EB%9C%B0+tv"><img src="./santa.jpg" width="474",height="474"></a>
 
     <h1>LOTTO</h1>
     <h6>수학심화탐구반</h6>
