--- a/lottoprobability.html
+++ b/lottoprobability.html
@@ -11,12 +11,12 @@
         <h4>당첨번호 3개 모두 포함되는 경우의 수를
         12개 중에서 순서 상관 없이 3개를 뽑는 경우의 수로 나누면 1등 당첨 확률이 나온다.</h4><br>
         <h3>3C3/12C3 = 1/220</h3><br>
-        <img src="./one.jpg"><br>
+        <img src="./one.jpg" width="189",height="83"><br>
         <h2>2등 당첨 확률</h2><br>
         <h4>위와 똑같이 당첨번호 2개를 포함하고 당첨번호가 아닌 수 1개를 선택하는 수에
         12개 중에서 순서 상관 없이 3개를 뽑는 경우의 수를 나누면 2등 당첨 확률이 나온다.</h4><br>
         <h3>3C2*9C1/12C3 = 27/220 </h3><br>
-        <img src="./two.jpg"><br>
+        <img src="./two.jpg" width="189",height="83"><br>
         <h2>3등 당첨 확률</h2><br>
         <h4>당첨번호 1개만 포함하고 당첨번호가 아닌 수 2개를 선택하는 수에 12개 중에서 순서 상관 없이 3개를 뽑는 경우의 수를 나누면 3등 당첨 확률이 나온다.</h4><br>
         <h3>3C1*9C2/12C3 = 108/220</h3><br>
