--- a/lottoprobability.html
+++ b/lottoprobability.html
@@ -12,6 +12,9 @@
         12개 중에서 순서 상관 없이 3개를 뽑는 경우의 수로 나누면 1등 당첨 확률이 나온다.</h4><br>
         <h3>3C3/12C3 = 1/220</h3><br>
         <img src="./one.png" >
+        <br>
+        <h3>1등 상품은 오리 손난로입니다!</h3>
+       
 
     </body>
 </html>
