--- a/lottonumber.html
+++ b/lottonumber.html
@@ -54,6 +54,6 @@
             document.getElementsByTagName('h2')[0].innerHTML='2 12 7'}, 3000)"
             >3초 후에 공개됩니다</button>
         <br>
-        <h5>로또 용지를 들고 종이를 배부해준 곳으로 와주세요!</h5>
+        <h5>번호 3개 전부 맞춘 분은 로또 용지를 들고 종이를 배부해준 곳으로 와주세요!</h5>
     </body>
 </html>
